macros/tests/trybuild/serialize_no_clone.stderr
error[E0277]: the trait bound `Foo: Clone` is not satisfied
 --> tests/trybuild/serialize_no_clone.rs:5:10
  |
5 | #[derive(Serialize)]
  |          ^^^^^^^^^ the trait `Clone` is not implemented for `Foo`
  |
  = note: this error originates in the derive macro `Serialize` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `Foo` with `#[derive(Clone)]`
  |
6 + #[derive(Clone)]
7 | struct Foo {
  |
